tooling/nargo_cli/tests/snapshots/execution_success/regression_3889/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "works",
        "type": {
          "kind": "struct",
          "path": "Baz::Works",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "fails",
        "type": {
          "kind": "struct",
          "path": "Foo::NewType",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "also_fails",
        "type": {
          "kind": "struct",
          "path": "Foo::NewType",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _3",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : [_3]",
    "EXPR [ (-1, _0) (-1, _1) (-1, _2) (1, _3) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
