tooling/nargo_cli/tests/snapshots/execution_success/regression_3889/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[regression_3889] Circuit output: Field(18)
----- stderr -----
warning: NewType is private and not visible from the current module
  ┌─ src/main.nr:8:21
  │
8 │     use crate::Foo::NewType;
  │                     ------- NewType is private
  │

warning: NewType is private and not visible from the current module
  ┌─ src/main.nr:9:21
  │
9 │     use crate::Foo::NewType as BarStruct;
  │                     ------- NewType is private
  │

warning: BarStruct is private and not visible from the current module
   ┌─ src/main.nr:16:21
   │
16 │     use crate::Bar::BarStruct;
   │                     --------- BarStruct is private
   │

warning: NewType is private and not visible from the current module
   ┌─ src/main.nr:17:21
   │
17 │     use crate::Bar::NewType;
   │                     ------- NewType is private
   │

warning: Works is private and not visible from the current module
   ┌─ src/main.nr:20:21
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                     ----- Works is private
   │

warning: Works is private and not visible from the current module
   ┌─ src/main.nr:20:21
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                     ----- Works is private
   │

warning: Works is private and not visible from the current module
   ┌─ src/main.nr:20:21
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                     ----- Works is private
   │

warning: BarStruct is private and not visible from the current module
   ┌─ src/main.nr:20:40
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                        --------- BarStruct is private
   │

warning: BarStruct is private and not visible from the current module
   ┌─ src/main.nr:20:40
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                        --------- BarStruct is private
   │

warning: BarStruct is private and not visible from the current module
   ┌─ src/main.nr:20:40
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                        --------- BarStruct is private
   │

warning: NewType is private and not visible from the current module
   ┌─ src/main.nr:20:68
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                                                    ------- NewType is private
   │

warning: NewType is private and not visible from the current module
   ┌─ src/main.nr:20:68
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                                                    ------- NewType is private
   │

warning: NewType is private and not visible from the current module
   ┌─ src/main.nr:20:68
   │
20 │ fn main(works: Baz::Works, fails: Baz::BarStruct, also_fails: Bar::NewType) -> pub Field {
   │                                                                    ------- NewType is private
   │

warning: a is private and not visible from the current module
   ┌─ src/main.nr:21:11
   │
21 │     works.a + fails.a + also_fails.a
   │           - a is private
   │

warning: a is private and not visible from the current module
   ┌─ src/main.nr:21:21
   │
21 │     works.a + fails.a + also_fails.a
   │                     - a is private
   │

warning: a is private and not visible from the current module
   ┌─ src/main.nr:21:36
   │
21 │     works.a + fails.a + also_fails.a
   │                                    - a is private
   │
